--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <span class="num" onclick="document.calc.txt.value +='.'">.</span>
         <span class="equal" onclick="document.calc.txt.value = eval(calc.txt.value)">=</span>
     </form>
-    <a href="https://www.google.com">
+    <a href="https://www.facebook.com/share/1nUNyCiZNo6wdBaF/?mibextid=LQQJ4d">
         <buttom> Click me!</buttom>
     </a>
 </body>
